Fix HTML structure and update form fields

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <label style="font-size: 25px; color:#0000e6">Hall Ticket No:<br><input type="text" name="name" required></label><br><br>
 <label style="font-size: 25px; color:#0000e6">Subject<br><input type="text" name="name" required></label><br><br>
 <label style="font-size: 25px; color:#0000e6">Group and Year<br><input type="text" name="name" required></label><br><br>
-    <label style="font-size: 25px; color:#0000e6">Explain Data Structure and Types of Data Structure<br><textarea name="q1" required rows="15" cols="100" style="background-color: #c299ff; color: #333; border-radius: 15px;border: 3px solid #000;"></textarea></label><br><br>
-    <label style="font-size: 25px; color:#0000e6">Explain Analysis of Algorith(Time Complexity ,Space complexity)<br><textarea name="q2" required rows="15" cols="100" style="background-color: #00ffff; color: #333;border-radius: 15px; border: 3px solid #000;"></textarea></label><br><br>
+    <label style="font-size: 25px; color:#0000e6">Explain Formatted tags<br><textarea name="q1" required rows="15" cols="100" style="background-color: #c299ff; color: #333; border-radius: 15px;border: 3px solid #000;"></textarea></label><br><br>
+    <label style="font-size: 25px; color:#0000e6">Explain Types of tables(Time Complexity ,Space complexity)<br><textarea name="q2" required rows="15" cols="100" style="background-color: #00ffff; color: #333;border-radius: 15px; border: 3px solid #000;"></textarea></label><br><br>
     
  
   
@@ -62,5 +62,6 @@ document.getElementById('assignmentForm').addEventListener('submit', function (e
     
 </script>
 </body>
+
 
 </html>
